Name:                acme-omitted
Version:             1.0.0.0
Synopsis:            Purely functional omitted content for Haskell
Category:            Acme
Stability:           stable
Description:
    Haskell has long lacked the ability to express the notion of \"omitted content\", making it impossible to differentiate between the truly \"undefined\" and the merely \"omitted\".
    .
    acme-omitted introduces the universal omitted content operator, bringing sanity
    and order back into the world of Haskell.
    It is standards-compliant, backwards-compatible, and user-friendly.

License:             BSD3
License-file:        COPYING

Author:              Joachim Fasting
Maintainer:          joachim.fasting@gmail.com
Copyright:           (c) 2012 Joachim Fasting

Extra-source-files:
    README.markdown

Build-type:          Simple
Cabal-version:       >= 1.2

Library
  Exposed-modules:     Acme.Omitted
  
  Build-depends:
    haskell98
    
  Hs-Source-Dirs: src

  ghc-options:
    -Wall
    -Werror
