Name:                acme-omitted
Version:             1.0.2.0
Synopsis:            Purely functional omitted content for Haskell
Category:            Acme
Stability:           stable
Description:
    Haskell has long lacked the ability to express the notion of
    \"omitted content\", making it impossible to differentiate
    between the truly \"undefined\" and the merely \"omitted\".
    .
    acme-omitted introduces the universal omitted content operator, bringing sanity
    and order back into the world of Haskell.
    It is standards-compliant, backwards-compatible, type-safe, and user-friendly.

License:             BSD3
License-file:        COPYING

Author:              Joachim Fasting
Maintainer:          joachim.fasting@gmail.com
Copyright:           (c) 2013 Joachim Fasting
Homepage:            https://github.com/joachifm/acme-omitted#readme

Extra-source-files:
    README.markdown

Build-type:          Simple
Cabal-version:       >= 1.10

Source-repository head
  Type: git
  location: git@github.com:joachifm/acme-omitted.git

Library
  Default-language: Haskell2010

  Exposed-modules:     Acme.Omitted

  Build-depends:
    haskell98

  Hs-Source-Dirs: src

  ghc-options:
    -Wall

Test-Suite specs
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  Hs-Source-Dirs: src tests

  Build-depends:
      haskell98
    , hspec
    , hspec-discover
